# CrazyFrootShop

./: .dockerignore  .env  .env.example  Dockerfile  README.md  cmd_list.py  default.conf  docker-compose.yaml  main.py  pyproject.toml  reply.py  requirements.txt
handlers/: admin_private.py  classes_functions.py  database.py  user_private.py
nginx/: default.conf
other_func/: classes_functions.py  config_reader.py  database.py  encrypt_db.py
src/: app.py  main.py
src/aiogram_functions/: __init__.py  commands.py  filters.py  keyboard.py  middlewares.py  states.py
src/client/: __init__.py  bot.py  broker_app.py  cryptopay.py  dispatcher.py
src/dto/: __init__.py  account.py  mailing.py  user.py
src/handlers/: __init__.py  admin_private.py  user_private.py
src/mailing/: __init__.py  consumer.py  producer.py
src/mappings/: __init__.py  account.py  mailing.py  user.py
src/model/: __init__.py  account.py  user.py
src/repo/: __init__.py  account.py  unit_of_work.py  user.py
src/service/: __init__.py  account.py  user.py
src/settings/: __init__.py  config.py  database_manager.py
src/utils/: __init__.py  celery.py  handle_file.py  mailing.py
