[project]
name = "crazyfrootshop"
version = "0.1.0"
description = "Crazy Froot Shop Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocryptopay>=0.4.8",
    "aiogram>=3.25.0",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.3.1",
    "cryptography>=46.0.5",
    "fastapi[all]>=0.128.8",
    "pydantic-settings>=2.12.0",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
]
