[project]
name = "crazyfrootshop"
version = "0.1.0"
description = "Crazy Froot Shop Project"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiocryptopay>=0.4.8",
    "aiogram>=3.27.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.7",
    "fastapi[all]>=0.135.3",
    "faststream[rabbit]>=0.6.7",
    "sqlalchemy>=2.0.49",
]
